src/test/ui/try-block/try-block-in-match.stderr
error: expected expression, found reserved keyword `try`
  --> $DIR/try-block-in-match.rs:6:11
   |
LL |     match try { false } { _ => {} }
   |     ----- ^^^ expected expression
   |     |
   |     while parsing this match expression

error: aborting due to previous error

